Docs: 에러 응답 API 추가

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -9,21 +9,29 @@
 == 공고 차수 API
 
 === 생성
-==== Request
+
+Request
+
 include::{snippets}/sequence-create/request-parts.adoc[]
 include::{snippets}/sequence-create/request-part-content-fields.adoc[]
 include::{snippets}/sequence-create/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/sequence-create/response-fields.adoc[]
 include::{snippets}/sequence-create/http-response.adoc[]
 
 === 수정
-==== Request
+
+Request
+
 include::{snippets}/sequence-update/path-parameters.adoc[]
 include::{snippets}/sequence-update/request-parts.adoc[]
 include::{snippets}/sequence-update/request-part-content-fields.adoc[]
 include::{snippets}/sequence-update/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/sequence-update/response-fields.adoc[]
 include::{snippets}/sequence-update/http-response.adoc[]
 
@@ -31,51 +39,75 @@ include::{snippets}/sequence-update/http-response.adoc[]
 == 공고 API
 
 === 조회
-==== Request
+
+Request
+
 include::{snippets}/announcement-get/path-parameters.adoc[]
 include::{snippets}/announcement-get/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/announcement-get/response-fields.adoc[]
 include::{snippets}/announcement-get/http-response.adoc[]
 
 === 페이징 조회
-==== Request
+
+Request
+
 include::{snippets}/announcement-get-page/request-parameters.adoc[]
 include::{snippets}/announcement-get-page/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/announcement-get-page/response-fields.adoc[]
 include::{snippets}/announcement-get-page/http-response.adoc[]
 
 === 생성 
-==== Request
+
+Request
+
 include::{snippets}/announcement-create/path-parameters.adoc[]
 include::{snippets}/announcement-create/request-fields.adoc[]
 include::{snippets}/announcement-create/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/announcement-create/response-fields.adoc[]
 include::{snippets}/announcement-create/http-response.adoc[]
 
 === 최근 공고 조회
-==== Request
+
+Request
+
 include::{snippets}/announcement-recent/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/announcement-recent/response-fields.adoc[]
 include::{snippets}/announcement-recent/http-response.adoc[]
 
 === 수정
-==== Request
+
+Request
+
 include::{snippets}/announcement-update/path-parameters.adoc[]
 include::{snippets}/announcement-update/request-fields.adoc[]
 include::{snippets}/announcement-update/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/announcement-update/response-fields.adoc[]
 include::{snippets}/announcement-update/http-response.adoc[]
 
 === 삭제
-==== Request
+
+Request
+
 include::{snippets}/announcement-delete/path-parameters.adoc[]
 include::{snippets}/announcement-delete/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/announcement-delete/response-fields.adoc[]
 include::{snippets}/announcement-delete/http-response.adoc[]
 
@@ -83,30 +115,42 @@ include::{snippets}/announcement-delete/http-response.adoc[]
 == 자격증 API
 
 === 리스트 조회
-==== Request
+
+Request
+
 include::{snippets}/certificate-get-list/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/certificate-get-list/response-fields.adoc[]
 include::{snippets}/certificate-get-list/http-response.adoc[]
 
 === 수정 
-==== Request
+
+Request
+
 include::{snippets}/certificate-update/path-parameters.adoc[]
 include::{snippets}/certificate-update/request-fields.adoc[]
 include::{snippets}/certificate-update/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/certificate-update/response-fields.adoc[]
 include::{snippets}/certificate-update/http-response.adoc[]
 
 
 == 회사 API
 
-=== 수정 
-==== Request
+=== 수정
+
+Request
+
 include::{snippets}/company-update/path-parameters.adoc[]
 include::{snippets}/company-update/request-fields.adoc[]
 include::{snippets}/company-update/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/company-update/response-fields.adoc[]
 include::{snippets}/company-update/http-response.adoc[]
 
@@ -114,18 +158,26 @@ include::{snippets}/company-update/http-response.adoc[]
 == 학과 API
 
 === 리스트 조회
-==== Request
+
+Request
+
 include::{snippets}/department-get-list/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/department-get-list/response-fields.adoc[]
 include::{snippets}/department-get-list/http-response.adoc[]
 
 === 수정 
-==== Request
+
+Request
+
 include::{snippets}/department-update/path-parameters.adoc[]
 include::{snippets}/department-update/request-fields.adoc[]
 include::{snippets}/department-update/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/department-update/response-fields.adoc[]
 include::{snippets}/department-update/http-response.adoc[]
 
@@ -133,11 +185,15 @@ include::{snippets}/department-update/http-response.adoc[]
 == 어학 API
 
 === 수정 
-==== Request
+
+Request
+
 include::{snippets}/language-update/path-parameters.adoc[]
 include::{snippets}/language-update/request-fields.adoc[]
 include::{snippets}/language-update/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/language-update/response-fields.adoc[]
 include::{snippets}/language-update/http-response.adoc[]
 
@@ -145,11 +201,15 @@ include::{snippets}/language-update/http-response.adoc[]
 == 직무 API
 
 === 수정 
-==== Request
+
+Request
+
 include::{snippets}/position-update/path-parameters.adoc[]
 include::{snippets}/position-update/request-fields.adoc[]
 include::{snippets}/position-update/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/position-update/response-fields.adoc[]
 include::{snippets}/position-update/http-response.adoc[]
 
@@ -157,11 +217,15 @@ include::{snippets}/position-update/http-response.adoc[]
 == 과목 API
 
 === 수정 
-==== Request
+
+Request
+
 include::{snippets}/subject-update/path-parameters.adoc[]
 include::{snippets}/subject-update/request-fields.adoc[]
 include::{snippets}/subject-update/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/subject-update/response-fields.adoc[]
 include::{snippets}/subject-update/http-response.adoc[]
 
@@ -169,9 +233,21 @@ include::{snippets}/subject-update/http-response.adoc[]
 == 검색 API
 
 === 기본정보 검색
-==== Request
+
+Request
+
 include::{snippets}/search-search/request-parameters.adoc[]
 include::{snippets}/search-search/http-request.adoc[]
-==== Response
+
+Response
+
 include::{snippets}/search-search/response-fields.adoc[]
 include::{snippets}/search-search/http-response.adoc[]
+
+
+== 에러 API
+
+Response
+
+include::{snippets}/error-request/response-fields.adoc[]
+include::{snippets}/error-request/http-response.adoc[]
